@@ -7,21 +7,25 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class InventoryService {
     private final InventoryRepository inventoryRepository;
+//    @Transactional(readOnly = true)
+//    public boolean isInStock(String skuCode){
+//        return inventoryRepository.existBySkuCode(skuCode);
+//    }
 
     @Transactional(readOnly = true)
-    public List<InventoryResponse> isInStock(List<String> skuCode){
-        return  inventoryRepository.findBySkuCodeIn(skuCode).stream()
-                .map(inventory ->
-                    InventoryResponse.builder()
-                    .skuCode(inventory.getSkuCode())
-                    .isInStock(inventory.getQuantity() > 0)
-                    .build()
-                ).toList();
-
+    public List<InventoryResponse> isInStock(List<String> skuCode) {
+        return inventoryRepository.findBySkuCodeIn(skuCode)
+                .stream()
+                .map(inventory -> InventoryResponse.builder()
+                        .skuCode(inventory.getSkuCode())
+                        .isInStock(inventory.getQuantity() > 0)
+                        .build()
+                ).collect(Collectors.toList());
     }
 }
